--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="imgs/slide1.png" class="d-block w-100" alt="...">
+        <img src="Images\slide1.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h1>Rent a car now!</h1>
           <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="imgs/slide2.png" class="d-block w-100" alt="...">
+        <img src="Images\slide2.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Select and Rent<br> a car from<br> a huge variety :)</h5>
           <p>Some representative placeholder content for the second slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="imgs/slide3.png" class="d-block w-100" alt="...">
+        <img src="Images\slide3.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h4>Accident free cars</h4>
           <p>Some representative placeholder content for the third slide.</p>
